# merkato

./: .gitignore  README.md  com.ekonomikas.merkato.json  com.ekonomikas.stocks.json~  com.github.sheepfarm.merkato.json  com.github.sheepfarm.merkato.json~  list_wheels.sh  meson.build  python-deps.json  wheels_list.txt
build-aux/meson/: postinstall.py
data/: com.ekonomikas.merkato.appdata.xml.in  com.ekonomikas.merkato.desktop.in  com.ekonomikas.merkato.gschema.xml  com.ekonomikas.merkato.metainfo.xml.in  com.ekonomikas.merkato.service.in  com.github.sheepfarm.merkato.desktop.in  com.github.sheepfarm.merkato.service.in  meson.build
data/icons/: icon.gresource.xml  meson.build
data/ui/: Application.css  MktErrorView.ui  MktMainWindow.ui  MktNoSymbolView.ui  MktNoTickerView.ui  MktPreferencesWindow.ui  MktSymbolRow.ui  MktSymbolView.ui  MktSymbolViewBox.ui  MktTickerRow.ui  MktTickerView.ui  MktTickerViewBox.ui  meson.build  ui.gresource.xml
po/: LINGUAS  POTFILES  POTFILES.in  ar.po  com.ekonomikas.merkato.pot  cs.po  de.po  de_CH.po  el.po  eo.mo  eo.po  es.po  fa.po  fr.po  he.po  hi.po  id.po  it.po  ja.po  ko.po  meson.build  pl.po  pt_BR.mo  pt_BR.po  pt_PT.po  ru_RU.po  sk.po  sv.mo  sv.po  th.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
python-wheels/: beautifulsoup4-4.14.2-py3-none-any.whl  requests_futures-1.0.2-py2.py3-none-any.whl  yahooquery-2.4.1-py3-none-any.whl
src/: AboutDialog.vala  Application.vala  ApplicationSet.vala  MainWindow.ui~  MainWindow.vala  PreferencesWindow.vala  QuoteRow.ui~  StocksQuoteRow.ui~  __init__.py  list_stock.py  main.py  merkato.gresource.xml  merkato.in  meson.build  search_stock.py  stock.py  stock_controller.py  style.css  watchlist_manager.py  window.py  yahoo_request.py
src/beans/: Symbol.vala
src/blp/: list_stock.blp  meson.build  search_stock.blp  window.blp
src/channel/: SearchTickerChannel.vala  SettingChannel.vala
src/controller/: Controller.vala
src/daemon/: SymbolQuestDaemon.vala
src/gtk/: help-overlay.ui
src/io/: MerkatoIO.vala  MerkatoIOFactory.vala  MerkatoJSON.vala
src/models/: Symbol.vala  Ticker.vala
src/persistence/: SymbolPersistence.vala
src/preferences/: Preferences.vala  PreferencesWindow.vala
src/rest/: RestClient.vala  YahooFinanceClient.vala
src/tools/: Broadcast.vala  Channel.vala  Consumer.vala  Daemon.vala  Lookup.vala
src/views/: ErrorView.vala
src/views/symbol/: NoSymbolView.vala  SymbolRow.vala  SymbolView.vala  SymbolViewBox.vala
src/views/ticker/: NoTickerView.vala  TickerRow.vala  TickerView.vala  TickerViewBox.vala
src/widgets/: SearchSpinner.vala  SymbolListBox.vala
wheels/: README  meson.build
wls/: charset_normalizer-3.4.3-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  meson.build  soupsieve-2.8-py3-none-any.whl
