message('Update translations')
# i18n.gettext(
#     'merkato',
#     args: [ '--directory=' + meson.source_root(), '--from-code=UTF-8', ],
#     preset: 'glib'
# )
i18n.gettext( app_id,
              args: [ '--directory=' + meson.source_root(), '--from-code=UTF-8', ],
              preset: 'glib'
)
